[package]
name = "ochenslab"
version = "0.0.1"
authors = ["Ivan Avdeev <me@w23.ru>"]
edition = "2018"
license = "WTFPL OR MIT"
description = "Trivial and fast fixed-size allocator/container"
keywords = ["slab", "allocator", "storage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
